--- a/arg/dvorak.tex
+++ b/arg/dvorak.tex
@@ -64,14 +64,32 @@ People who write about Dvořák's symphonies are very condescending about \No1. 
 \begin{quote}
 Dvořák, with the emotional directness of his Slavic nature, open-hearted and filled with the urge to pour out his feelings in music, was too naive to experience the doubts that afflicted other composers when it came to tackling the problems of the symphony.
 \end{quote}
-Having said that, he points out that Dvořák wrote No. 1 when he was only 23, "although he had not mastered the problems which the form posed". He goes on to say that the work "shows the hand of a beginner". And that's about it: he says almost nothing further about it.
+Having said that, he points out that Dvořák wrote No. 1 when he was only 23, ``although he had not mastered the problems which the form posed''. He goes on to say that the work ``shows the hand of a beginner''. And that's about it: he says almost nothing further about it.
 
 I cannot dismiss it like that. Sometime around 1970 I bought the Kertesz LP and fell in love with the first movement, with its gorgeous spinning-wheel theme for lower strings and brass. I have listened to every recording of it to come out since, and I've reached the stage where the only movement that doesn't excite me wildly is II, the Adagio. It is bland and leaves no impression; I think it is there for contrast (repose), and it was not intended to make a strong impression. But the Scherzo is a work of genius, reaching a peak in much the same manner as the scherzo in Beethoven's Fifth.
 
 The finale is typical of Dvořák; it even has a great example of ``Dvořák rhythm''.
 And it builds to a thrilling conclusion. Every time I listen to this symphony I love it more. It certainly has a bit of Schumann in it---and of Mendelssohn---but it is truly Dvořák: full of his special genius and the splendor of his orchestral sounds. Yet Dvořák never heard it, and it wasn't published until 1961. The Kertesz was the first recording (1965, I think).
 
-Recordings have followed by Rowicki, Kubelik, Neumann, Suitner, Järvi, Gunzenhauser, and Macal. Having heard these, I have decided to discuss the four that I think are the strongest contenders for your dollars: Macal, Neumann, Kubelik, and Kertesz. First, the timings:
+Recordings have followed by Rowicki, Kubelik, Neumann, Suitner, Järvi, Gunzenhauser, and Macal. Having heard these, I have decided to discuss the four that I think are the strongest contenders for your dollars: Macal, Neumann, Kubelik, and Kertesz. First, the timings:\footnote{The timings in the original table above don't really match what I see on the Internet in the streaming services or what I can find out about the CDs. Here is a best attempt at actual timings.
+\begin{center}
+\begin{tabular}{l c c c c}
+&Macal & Neumann & Kubelik & Kertesz\\
+I & 22:30 & 14:20 & 13:33 &19:00\\
+II & 10:43 & 14:23 & 11:12 & 13:43\\
+III & 8:20 &  9:20 & 9:37 & 8:43 \\
+IV & 13:43 & 13:40 & 13:37 & 12:47\\
+\end{tabular}
+\end{center}
+The Kubelik and Kertesz are about right except for IV with Kertesz. Who knows, maybe it's a typo,
+because every issue I see is around 12:40ish.
+The Neumann comes from the digital recordings in the 80s, not the recent
+reissue of the performances from the 1970s, which are faster.
+I have no idea what's going on with the Macal.
+The CD is out of print and all I could find is a photo of the CD ebay,
+but even so I reversed III and IV
+because the times on the CD didn't make sense. Now every timing table ever published in ARG
+is suspect in my head.}
 
 \begin{center}
 \begin{tabular}{l c c c c}
@@ -83,12 +101,12 @@ IV & 11:18 & 13:30 & 13:36 & 14:40\\
 \end{tabular}
 \end{center}
 
-{\bf I}. Neumann's tempo is broader than Macal's and allows for more majesty. Neumann makes me love the music, as Kertesz did on LP. (1 don't know what accounts for Kertesz's timing---it doesn't seem outrageously slow, though it does emphasize the gloomy side of the music. It's not as ``heady'' as Neumann.) The main theme is quite wonderful and will remind you of a spinning wheel (a golden one or perhaps Omphale's).
+{\bf I}. Neumann's tempo is broader than Macal's and allows for more majesty. Neumann makes me love the music, as Kertesz did on LP. (I don't know what accounts for Kertesz's timing---it doesn't seem outrageously slow, though it does emphasize the gloomy side of the music. It's not as ``heady'' as Neumann.) The main theme is quite wonderful and will remind you of a spinning wheel (a golden one or perhaps Omphale's).
 Koss has the best sound of all---fairly close to the Kertesz LP, but I think the Kertesz on CD is not as smooth.
 Supraphon is closer to the strings, and that makes that bass spinning-wheel
 theme all the more imposing; but when the violins go at it full blast, they are so bright 
 that you blink Still, What is Dvořák without those thrilling Czech violins? 
-They play so briliantly, with a sort of frenzied elan. 
+They play so brilliantly, with a sort of frenzied elan. 
 It's an effortless brilliance, like confident peasant dancing.
 And the Czech Philharmonic certainly sounds more Czech--no surprise--especially the violins.
 In Milwaukee they have to strain for whatever brilliance they attain.
@@ -169,7 +187,7 @@ Carl Bauman likes it better than the rest of us, and he recommends the loving ac
 and the superior Kubelik. He calls the Neumann "flaccid" and "a disaster" , but both
 he and Steven Haller find the Järvi a decent third choice.
 The Gunzenhauser (Naxos) is in that same category. 
-Kurt Moses reviewed the Pe\v{s}ek (July/Aug 1996) and seemed quite bored by it. The sound is terrific.
+Kurt Moses reviewed the Pešek (July/Aug 1996) and seemed quite bored by it. The sound is terrific.
 
 \st
 Berlin/Kubelik & DG set or MHS 564673\\
@@ -208,7 +226,7 @@ Kubelik drives things on to an exciting conclusion, but it still sounds manipula
 Symphony 3 is Kubelik's worst recording. Järvi is again utterly natural, the music finding a more comfortable pace but building almost inexorably to a thrilling conclusion.
 Those two are the contrasting recordings.
 Kertesz is much closer to Järvi than Kubelik and could also be considered close to ideal.
-Pe\v{s}ek on Virgin is a little on the slow side but very natural. The relaxed, leisurely pace allows for some lovely turns of phrase; and the sound is warm, creamy, and rich. Neumann is middle-of-the-road---a little rough in I---but has harsh sound. The Naxos sound for Gunzen-hauser is the opposite: too mellow and blended. The music needs an edge somewhere, and we should hear the woodwinds.
+Pešek on Virgin is a little on the slow side but very natural. The relaxed, leisurely pace allows for some lovely turns of phrase; and the sound is warm, creamy, and rich. Neumann is middle-of-the-road---a little rough in I---but has harsh sound. The Naxos sound for Gunzenhauser is the opposite: too mellow and blended. The music needs an edge somewhere, and we should hear the woodwinds.
 
 The Koss (Macal) is also rather mellow; but it's closer-up than the Järvi and without the reverberation. I rather like the atmospheric Chandos sound, but if you dislike echo you'll prefer Macal. In some climaxes everything gets jumbled together---but I like that; one often hears it like that in real life. The conducting is good in both cases, but Järvi is inclined to make more of the climaxes and more inclined to majesty. Macal takes the slow movement much slower and the last movement faster.
 That makes it seem less gentle and attractive a little brusque, I think. But Milwaukee is a better orchestra than the Scots in every department (both could use more strings), and the Koss engineers supply more warmth and clarity and less echo. For my money no one comes near Järvi in 3. Rowicki is rather general and vague, Suitner even more so.
@@ -227,14 +245,14 @@ impression when you've heard it all is of exuberant grandeur-and maybe that's a 
 
 The Kertesz stood alone for years as the only really good recording. It's quite bracing and will always be worth hearing. At this stage Kertesz's scherzo is still the most exciting. The Kubelik was no particular threat: Carl Bauman calls it turgid; I call it jumpy: the scherzo seems especially lumpy, and the second theme of the finale is especially jittery---has no repose. There is more bounce and surge and bump than flow in Kubelik's Fourth. The Järvi is no threat either---soggy and boring.
 
-But after 25 years at the top of the list the Kertesz was finally surpassed by the Pe\v{s}ek. The gorgeous, velvety sound---especially the strings---is a large part of its superiority. The orchestra is the Czech Philharmonic, in their home hall, and their playing and the place add a great deal to the picture. They respond to Pe\v{s}ek with much richer tone and much more fire than they were giving Neumann the last few years of his tenure. The approach is smoother and tempos are broader than Kertesz, but I is not as slow as Järvi. Musical opulence and majesty! When you hear a recording this good, you thank God for digital.
+But after 25 years at the top of the list the Kertesz was finally surpassed by the Pešek. The gorgeous, velvety sound---especially the strings---is a large part of its superiority. The orchestra is the Czech Philharmonic, in their home hall, and their playing and the place add a great deal to the picture. They respond to Pešek with much richer tone and much more fire than they were giving Neumann the last few years of his tenure. The approach is smoother and tempos are broader than Kertesz, but I is not as slow as Järvi. Musical opulence and majesty! When you hear a recording this good, you thank God for digital.
 
-A year or two later Koss brought out the Macal, and now there are three great Fourths---Kertesz, Macal, and Pe\v{s}ek---but the greatest of these is Pe\v{s}ek. Macal is much smoother and warmer sounding than the rather stark and edgy Kertesz (which vas miked pretty close-up) though the tempos are about the same in I and III.
+A year or two later Koss brought out the Macal, and now there are three great Fourths---Kertesz, Macal, and Pešek---but the greatest of these is Pešek. Macal is much smoother and warmer sounding than the rather stark and edgy Kertesz (which vas miked pretty close-up) though the tempos are about the same in I and III.
 A slower II makes it seem more Wagnerian than the Kertesz does, and a slower IV makes little or no difference.
 The Milwaukee players of today are as good as the London Symphony people of the late 1960s, and the Koss recording is more natural---more ``concert-hall''.
 
 \st
-Czech Phil/Pe\v{s}ek& Virgin 59016\\
+Czech Phil/Pešek& Virgin 59016\\
 Milwaukee/Macal&Koss 1015\\
 London Sym/Kertesz & London NA
 \et
@@ -249,7 +267,7 @@ no longer a pastoral symphony by the time you reach the last movement.
 The Kubelik is very exciting, and part of it is certainly the Berlin Philharmonic: listen to those strings! But I prefer the Scottish oboe (Järvi). There is no difference in tempos between Järvi and Kubelik---a matter of a few seconds here and there-and the Kertesz is pretty close, too. Three terrific conductors in great form. The Järvi is recorded further back in the hall; I like that; Tom Godell likes it less, and Steven Haller complains bitterly of echo-chamber sound. The Kubelik and Kertesz are closer up. Sometimes Kubelik startles you, because an orchestral outburst can seem so close at hand. Kertesz sounded smoother on LP than on CD. But I have to say that it's impossible to choose among these three. I have even come to accept Kubelik's I, which I objected to in the 1990 overview. The clarinet theme is so winsome, and the movement gets so exciting that I can't figure out what I once objected to—probably just that the other two conductors are a little smoother, more pastoral
 and flowing.
 
-The Neumann is rather dull. The sound is crisp, and the orchestra plays well; but you will miss the intensity and alertness, the contrasts and the coherence of a conductor like Järvi. In fact, Järvi has it down perfectly: he seems more Czech than Neumann. Pe\v{s}ek again comes thru here, with the same virtues as his 4th: glorious sound, great orchestra, natural Czech interpretation. Macal has the virtues and drawbacks you would expect. The Milwaukee Symphony plays very beautifully, but the strings are not as thrilling as the Czech or Berlin ones. The sound is as good as it gets (if you like it back-in-the-hall; Steven Haller prefers more of an edge and finds it muffled---review this issue).
+The Neumann is rather dull. The sound is crisp, and the orchestra plays well; but you will miss the intensity and alertness, the contrasts and the coherence of a conductor like Järvi. In fact, Järvi has it down perfectly: he seems more Czech than Neumann. Pešek again comes thru here, with the same virtues as his 4th: glorious sound, great orchestra, natural Czech interpretation. Macal has the virtues and drawbacks you would expect. The Milwaukee Symphony plays very beautifully, but the strings are not as thrilling as the Czech or Berlin ones. The sound is as good as it gets (if you like it back-in-the-hall; Steven Haller prefers more of an edge and finds it muffled---review this issue).
 Macal is choppier and more energetic than Järvi---or almost anyone else---but I prefer Dvořák smoother and more relaxed. IV is about as good as it gets anywhere. Koss's notes are not well written.
 
 The old Rowicki is pretty good---one of his better Dvořáks. Mr Haldeman calls the ansons fresh and spontaneous, but others don't know it. Steven Haller liked the Naxos Gunzenhauser, but it is coupled
@@ -259,7 +277,7 @@ with a less-than-competitive 7th. Still, if you don't know the 5th, Naxos gives 
 Scots/Järvi & Chandos 8552\\
 Berlin/Kubelik & DG or MHS set\\
 London Sym/Kertesz & London set (NA)\\
-Czech Phil/Pe\v{s}ek  & Virgin 59522\\
+Czech Phil/Pešek  & Virgin 59522\\
 Milwaukee/Macal & Koss 1026
 \et
 
@@ -273,7 +291,7 @@ For some reason, Kubelik takes longer over that last movement than anyone else. 
 Some of us prefer the music less manipulated, with a more natural and dependable flow. For that it is impossible to beat Bělohlávek. He enriches the music with majesty and subtlety (listen to those strings!).
 He also has the best sound of any-absolutely and without doubt. Kertesz is more emphatic than Bělohlávek---and brassier and brasher---but still softer and gentler than Kubelik. He also has better sound than Kubelik, but it is closer-up sound, and that may irritate some listeners. But I am very unhappy with his exposition repeat: four minutes into I he starts all over---and rather dashes thru it all the second time around. Why bother? Dvořák himself never took that repeat and never wanted it.
 
-Libor Pe\v{s}ek, who impressed us so much in a number of the other symphonies, leaves us cold in this one. (Why is it that no one seems to do them all well?) The sound is a little distant this time, and the conductor seems to float thru the music—misses a lot of points that Kubelik and Kertesz facilitate. Those two conductors are more cumulative-know how to build a climax. They are also more coherent, more stirring, more heady-more of a total experience (I include Bělohlávek in this description). It's the same Czech Philharmonic that plays for Bělohlávek, and they sound very good, but Bělohlávek has figured this symphony out and Pe\v{s}ek has not.
+Libor Pešek, who impressed us so much in a number of the other symphonies, leaves us cold in this one. (Why is it that no one seems to do them all well?) The sound is a little distant this time, and the conductor seems to float thru the music—misses a lot of points that Kubelik and Kertesz facilitate. Those two conductors are more cumulative-know how to build a climax. They are also more coherent, more stirring, more heady-more of a total experience (I include Bělohlávek in this description). It's the same Czech Philharmonic that plays for Bělohlávek, and they sound very good, but Bělohlávek has figured this symphony out and Pešek has not.
 
 Another Czech Philharmonic recording---with Ancerl---promises a lot but lets us down.
 For some reason the conducting is brusque and routine, with very little shaping.
@@ -299,6 +317,39 @@ Other eminent critics have called it profusely inspired and a great symphony by 
 
 It is also his most Brahmsian. It took him only three months to write it—not surprising, considering the level of inspiration. Some people hear hints of two great themes in it: the second theme in I resembles the beautiful cello solo in the Second Brahms Piano Concerto, and in II one spot sounds like the love duet from Tristan and Isolde. (To me it all sounds like Brahms, not Wagner.) The Scherzo trips along lightly and cheerfully; conductors are inclined to over-inflect it, but it's really a prime example of the natural flow of Dvořák's music. Yet there is passion in this symphony, and that can be slighted as well. It's not an easy work to get right.
 Suitner's 7 is forceful, with sharp attacks
+and little charm-sinewy and intense rather than graceful. Giulini on EMI is almost the other extreme: only mildly engaging, a run-through. (The Chicago Symphony has made available a far better Giulini 7th; see Nov/Dec 1996 and July/Aug 1994.) Giulini is a maddeningly inconsistent conductor. There was a Giulini on DG. It was better conducted than the EMI or Sony, but the sound was not great. The Sony Giulini (Concertgebouw) is very slow and ponderous, with no energy or pulse. Jansons has plenty of that, but he doesn't slow down for the appealing parts-goes flying right thru them—and III sounds half-hearted. Colin Davis is rather cold emotionally and gets rather cold sound, too. He achieves tremendous drive and clarity, but he refuses to linger over anything-and Dvorak gives us plenty to linger over.
+
+The Marriner seems perverse: he rushes thru all the big tunes and slows down where there is no reason to. Il is breathless, and the Minnesota Orchestra is decidedly mediocre.
+Minnesota Orchestra is decidedly mediocre.
+The Maazel was odd and not very well shaped.
+John McKelvey was very impressed by the
+Mata 7th (M/J 1988)---a Germanic approach,
+with good flow, plenty of warmth, and a good recording. The rest of us don't know it.
+Another one that impressed Mr McKelvey was the Inbal on Teldec---very well planned,
+conducted, and recorded; very refined playing, with a dark Central European
+sound (Sept/Oct 1992---available now only with 8 and 9). The sound is warm and 
+appealing and the approach quite lyrical and songful. Good timpani.
+Järvi's 7th was the first in his Dvorak series (1987), and Steven Haller raved about it.
+It still stands up very well next to everything that's been 
+done since, but for sheer beauty of sound it is not quite in the very top group.
+Gunzenhauser on Naxos is warm and satisfying but somewhat low-key, a decent introduction
+to the work if you are on a budget.
+The Dorati is actually quite good, but the Mercury sound is somewhat tinny. Tempos are close to ideal. From the same period there was a Barbirolli that I find unbearable: the conductor is at a total loss in Dvorak. He is blatant, has no subtlety: everything is on the same obvious level. There is no flow, no cumulative effect. Everything is heavy-handed. The orchestra is terrible. It's a shame that EMI brought this piece of dreck to CD: the orchestra simply couldn't cope with the music.
+Dozens of American orchestras play it better.
+But EMI's recording will win no prizes either: hard, crude sounds too close-up---a
+flute louder than a whole string section. The Kosler is also pretty old,
+but it's a genial, well-inflected account.
+Zdenek Macal again delivers excitement-in spades-and Koss delivers gorgeous sound.
+II and IlI are the fastest around, and they sound driven. The music has been deprived of its natural flow, and this is an eccentric ver-sion-for people who like things fast. Another conductor who drives things too hard is Chung on BIS. The Scherzo sounds more like Beethoven than Dvorak, and the orchestra is nowhere near as good as Milwaukee. James Levine's 7th also seems hard-driven: excitement at the expense of the music's emotional range. What Monteux had was both-along with a very nice sound from the London Symphony. There is no particular need for the Monteux with so many fine---and better-sounding---recordings on the market, but Steven Haller is not the only ARG reviewer who reveres it. Nor do we really need the 1963 Bernstein, just reissued. It is exciting and passionate, but so are many far better---played and---recorded ones (actually, the sound is vastly improved on CD). The Ormandy was better recorded (RCA), but Ormandy was not good at Dvorak.
+
+Andrew Davis does nothing with the music, and the sound is distant, cloudy, and screechy (all!). Another bad recording job is the EMI Sawallisch---but part of the problem is certainly the decline of the Philadelphia Orchestra: the violins are scrappy, scrawny, and tinny. There is no blend or warmth.
+
+Among the best-sounding 7ths---along with Macal and Inbal---must be counted the Previn on Telarc. Has the Los Angeles Philharmonic ever sounded more beautiful? Dark, rich sound; strings are gorgeous, winds charming, brass great, and the bass sounds are all full and strong. Tempos are moderate---Brahmsian,
+one would have to say---but the scherzo is fast (modelled after Monteux rather than Szell). On the whole, in Mr Haldeman's words, it is both majestic and sympathetic. Telarc seems to have deleted both issues of the Previn
+(one was midprice), but some day they will bring this back.
+
+Another one that could win a prize for sound is Bělohlávek. The Czech Philharmonic sounds a little more idiomatic than any other orchestra (strings and winds), and Chandos puts us back a bit in the hall compared to Virgin (Pešek) or Telarc. Bělohlávek is a more exciting conductor than Previn or Pešek: he makes them sound tame in this symphony.
+But some of us need a gentler recording as well as an exciting one. The Neumann, with the same orchestra, has some charm but little vitality. The Pešek is actually with his Liverpool orchestra-not the Czech Philharmonic-but the strings are utterly gorgeous, the flow is perfect, and the rhapsodic flavor makes it feel like Rachmaninoff. (That's a real plus to me-romantic music should sound romantic-but others may find it too indulgent.)
 
 
 \end{document}
