timing mystery solved

--- a/arg/dvorak.tex
+++ b/arg/dvorak.tex
@@ -71,25 +71,7 @@ I cannot dismiss it like that. Sometime around 1970 I bought the Kertesz LP and 
 The finale is typical of Dvořák; it even has a great example of ``Dvořák rhythm''.
 And it builds to a thrilling conclusion. Every time I listen to this symphony I love it more. It certainly has a bit of Schumann in it---and of Mendelssohn---but it is truly Dvořák: full of his special genius and the splendor of his orchestral sounds. Yet Dvořák never heard it, and it wasn't published until 1961. The Kertesz was the first recording (1965, I think).
 
-Recordings have followed by Rowicki, Kubelik, Neumann, Suitner, Järvi, Gunzenhauser, and Macal. Having heard these, I have decided to discuss the four that I think are the strongest contenders for your dollars: Macal, Neumann, Kubelik, and Kertesz. First, the timings:\footnote{The timings in the original table above don't really match what I see on the Internet in the streaming services or what I can find out about the CDs. Here is a best attempt at actual timings.
-\begin{center}
-\begin{tabular}{l c c c c}
-&Macal & Neumann & Kubelik & Kertesz\\
-I & 22:30 & 14:20 & 13:33 &19:00\\
-II & 10:43 & 14:23 & 11:12 & 13:43\\
-III & 8:20 &  9:20 & 9:37 & 8:43 \\
-IV & 13:43 & 13:40 & 13:37 & 12:47\\
-\end{tabular}
-\end{center}
-The Kubelik and Kertesz are about right except for IV with Kertesz. Who knows, maybe it's a typo,
-because every issue I see is around 12:40ish.
-The Neumann comes from the digital recordings in the 80s, not the recent
-reissue of the performances from the 1970s, which are faster.
-I have no idea what's going on with the Macal.
-The CD is out of print and all I could find is a photo of the CD ebay,
-but even so I reversed III and IV
-because the times on the CD didn't make sense. Now every timing table ever published in ARG
-is suspect in my head.}
+Recordings have followed by Rowicki, Kubelik, Neumann, Suitner, Järvi, Gunzenhauser, and Macal. Having heard these, I have decided to discuss the four that I think are the strongest contenders for your dollars: Macal, Neumann, Kubelik, and Kertesz. First, the timings:\footnote{Kertesz really takes 12:40-ish for the 4th movement here. The 14:40 seems to come from the original LP, but none of the CD reissues have that time. All the other timings here are about right. The review of the Macal in the ARG issue where this appears explains why the timings on the CD are completely different than what is listed. The CD book lists the contents of the disk in the wrong order.}
 
 \begin{center}
 \begin{tabular}{l c c c c}
@@ -351,5 +333,22 @@ one would have to say---but the scherzo is fast (modelled after Monteux rather t
 Another one that could win a prize for sound is Bělohlávek. The Czech Philharmonic sounds a little more idiomatic than any other orchestra (strings and winds), and Chandos puts us back a bit in the hall compared to Virgin (Pešek) or Telarc. Bělohlávek is a more exciting conductor than Previn or Pešek: he makes them sound tame in this symphony.
 But some of us need a gentler recording as well as an exciting one. The Neumann, with the same orchestra, has some charm but little vitality. The Pešek is actually with his Liverpool orchestra-not the Czech Philharmonic-but the strings are utterly gorgeous, the flow is perfect, and the rhapsodic flavor makes it feel like Rachmaninoff. (That's a real plus to me-romantic music should sound romantic-but others may find it too indulgent.)
 
+Kubelik whips up far more excitement than Pešek or Previn---right from the first notes. Do you prefer emphatic, exciting conducting or smooth, serene conducting? Kubelik's DG sound is also a bit harsh, and certainly all our recommendations have far better sound.
+The earliest recording worth having is the Szell (1960). You might not expect it, but it is very graceful. But Sell is also wild, heady, ecstatic-still the most exciting interpreter.
+The sound is hissy, but the strings have an icy brilliance that suits Dvorak---and that few besides Szell were able to manage. The horns are very good, and fairly close miking helps many instruments stand out. Naturally, it is very well played. Dohnanyi with the same orchestra years later has none of Szell's charm; it's Germanic and square, with some drama, but flow and grandeur are foreign to this conductor. It might as well be Beethoven.
+
+\st
+Czech Phil/Belohlavek & Chandos 9391\\
+Liverpool Phil/Pesek & Virgin 59516\\
+LA/Previn & Telarc NA\\
+Cleveland/Szell & Sony 63151 [2CD]\\
+Philharmonia/Inbal & Teldec 95497 [2CD]
+\et
+
+\section{Symphony 8}
+
+After the Seventh, the Eighth represents a
+simplification. It is looser formally---more rhapsodic---and it sounds almost improvised.
+Melodies flow in profusion; there are almost
 
 \end{document}
