--- a/arg/dvorak.tex
+++ b/arg/dvorak.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt]{article}%
+\usepackage{array}
 \input setup
 
 \begin{document}
@@ -407,7 +408,7 @@ Berlin/Kubelik & DG or MHS set
 Not many pieces of music have been recorded as often as this one. And there
 are a lot of good recordings, too. After all, any full-time orchestra has 
 played it a lot and knows it well-and that is not true of the other symphonies.
-There are over 100 recordings of it available right now-many in numerous incarnations.
+There are over 100 recordings of it available right now---many in numerous incarnations.
 There are eight listings for Neumann and six for Nanut, though they seem to represent
 five actual Neumann recordings and only one by Nanut. 
 Needless to say, a lot of recordings are out of the catalog, too.
@@ -424,8 +425,9 @@ The strings sound slightly metallic and have no body. Kubelik's approach is geni
 There are terrible 9ths by Ozawa (but Philip Haldeman likes it) and Eschenbach, among others. There are also a host of perfectly reasonable but unremarkable and uncompetitive readings, and we needn't discuss all of them. In this issue we review the Frühbeck de Burgos. It is beautifully conceived, and this man proves again that he is a far greater conductor than today's big names. It is utterly romantic---the opposite of Toscanini or Paray---and much more sensitive than Fiedler
 or Kertesz or Szell. The main reason this doesn't make our top ten is that it's a concert performance with distant miking and audience coughing. The playing is very beautiful.
 
-The Ancerl is a fine recording. So is the Kempe (with Beecham's Royal Philharmonic); it has come and gone on a number of labels.
-It's fresh and straightforward and much better recorded than the Szell. The Szell is a bit tight and inflexible-as Szell could be. There was another fine Kempe on London (LSO). Barbir-olli's 9th is much better played than his 7th or 8th (both dreadful) but still too English: blunt and businesslike, with no subtleties or refine-ments, no dreamy or heart-stopping moments. The strings are never beautiful, and the English horn solo in Il is very dull.
+The Ančerl is a fine recording. 
+So is the Kempe (with Beecham's Royal Philharmonic); it has come and gone on a number of labels.
+It's fresh and straightforward and much better recorded than the Szell. The Szell is a bit tight and inflexible-as Szell could be. There was another fine Kempe on London (LSO). Barbirolli's 9th is much better played than his 7th or 8th (both dreadful) but still too English: blunt and businesslike, with no subtleties or refinements, no dreamy or heart-stopping moments. The strings are never beautiful, and the English horn solo in II is very dull.
 James Levine's 9th is coupled with a good 8th (DG, May/June 1997). It's a pretty straightforward interpretation in a rather cavernous acoustic. His older one (RCA, deleted) was more aggressive, emphatic, high-intensity; and the sound was pretty good.
 
 Arthur Fiedler's (with the Boston Symphony) is a brilliant performance that really crackles in the last two movements, where he is one of the two or three fastest. The very good sound is missing only the deep bass we can hear in some recordings. The Boston wind soloists are wonderful. Sawallisch has a great orchestra,
@@ -437,7 +439,7 @@ Kondrashin had the same orchestra---Vienna---in 1979 instead of 1967. (It was is
 
 Bruno Walter knows how to relax and bask
 in the warmth, but he doesn't miss much of
-the drama and excitement (maybe a little in the final climax)--a perfect specimen of balanced, healthy, brilliant, moving conducting that serves the music ideally and never calls attention to itself. There's also plenty of weight and majesty. His III is the slowest we know, but it works, and you hear so much more detail. The sound shows no signs of age except that 1959 was a vintage year. Vibrant.
+the drama and excitement (maybe a little in the final climax)---a perfect specimen of balanced, healthy, brilliant, moving conducting that serves the music ideally and never calls attention to itself. There's also plenty of weight and majesty. His III is the slowest we know, but it works, and you hear so much more detail. The sound shows no signs of age except that 1959 was a vintage year. Vibrant.
 
 Lawrence Hansen called the Pešek dubious and episodic---meandering and unfocussed---but had some kind words for Neumann, whom Mr Bauman also calls first-rate. The hushed beauty of II is a high point, but the whole performance is powerful, lovingly phrased, and tonally rich. This seems to apply to both the Supraphon and Denon performances (abour 10 years apart)---see Jan/Feb 1995. (Steven Haller didn't like the Neumann in Mar/Apr
 1987.) Another fine Czech conductor is Bělohlávek, and his thoughtful 9th belongs among the top 10 (also Jan/Feb 1995).
@@ -452,13 +454,15 @@ We never reviewed the Inbal on Telec, but we listened for this overview. Teldec 
 That's what you get in the Inbal 9th. The first entry of the cellos is thrilling; the brass are loud and raucous. The violins-usually off in the distance---don't sound very good when the spotlight is on them. It's exciting sound until you compare it to the other Teldec---Masur in New York. Every soloist is better in New York. Every section is better, too. As for conducting Inbal is exciting---very dramatic---but the central part of II is definitely too slow, and III is
 rather ordinary. If there weren't the Masur to
 compare it to, the Inbal would come across as one of the better recordings.
+
 Kurt Masur's New York recording was reviewed in July/August 1992 by Tom Godell, who called it ``a New World for the ages that instantly takes its place as the best available.'' When an editor reads words like that,
 he is suspicious. Doesn't Mr Godell know the Stokowski (not available at the time)? And has he heard our other Overview recommendations (many of the same in 1990 as here)? So I had to get the Masur for myself. The orchestra is quite something, and the soloists are unbeatable.
-Teldec's rich, full sound lets you hear how warm and polished the strings are. Tempos are relaxed but not too slow, and the colors, clarity of texture, and balances are ideal. Il is unsurpassed in its serene loveliness and poetic power. Tom Godell told the truth; this goes on the select list of the best ever. It may very well be the best—best played, best conducted, best
+Teldec's rich, full sound lets you hear how warm and polished the strings are. Tempos are relaxed but not too slow, and the colors, clarity of texture, and balances are ideal. II is unsurpassed in its serene loveliness and poetic power. Tom Godell told the truth; this goes on the select list of the best ever. It may very well be the best—best played, best conducted, best
 recorded.
 
-The CBS Bernstein with the same orchestra certainly has temperament and emotion, ener-sy and enthusiasm; it still sounds good, too, if you can find it. Its biggest fault was a rushed
+The CBS Bernstein with the same orchestra certainly has temperament and emotion, energy and enthusiasm; it still sounds good, too, if you can find it. Its biggest fault was a rushed
 scherzo. The DG Bernstein will seem distorted to most listeners; II is quite distended at over 18 minutes (normal is more like 12). It's one thing to milk the music; it's something else to turn it to cheese. Bernstein plays around with every phrase can't leave anything alone. The first movement is so slow it never seems to begin. Another slow performance---downright sluggish---is the newest Giulini (Sony; Nov/ Dec 1994). Giulini doesn't produce quite the abomination Bernstein does, but Steven Haller describes it as a study in torpor.
+
 Mr Haller still thinks the Reiner ``supreme'' along with the Paray. Many of us can't stand the cold Mercury sound of the Paray; it's brass-heavy, and the strings are squeaky. It is airless---never expansive. The timpani is strong. To some extent you come to accept Paray's tempos, but they are the fastest I know. II is very nice, even though it's two minutes faster than anybody else. The English horn soloist is good. But in the final analysis the Paray is a ``so-what'' performance: it's just not moving, and it cannot be at those tempos. Carl Bauman thinks a lot of the Reiner, too---along with the Szell. Szell has the same timings as Barbirolli, but the Cleveland Orchestra makes those Halle chaps sound like rank amateurs. Still, Szell is very little interested in beautiful sounds, and his strings can be pretty blunt. Szell doesn't give us a beautiful performance---he is not satisfying to the senses---but he does make it exciting. II is nice; III takes a minute longer than Paray's and is far more digestible. IV is exciting, but here as elsewhere there's no
 ``float'' to the music: Szell is too earthbound.
 Reiner can be fiery, but he is utterly insensitive here. Lawrence Hansen says I am being too hard on Reiner: it is tight, powerful, dramatic, even driven, but not nervous and spastic like Toscanini (none of us can stand the Toscanini). Nor does it have the "ferocious clarity" of Szell. The Editor finds all three too fast and too cold-and the Editor is not alone. If you like the music tight and driven, one of these three may be for you---and Szell is probably the best of the type.
@@ -471,17 +475,24 @@ Here are the best recordings of each decade.
 All are stereo; all have excellent sound:
 
 \begin{center}
-\begin{tabular}{l l r}
+\begin{tabular}{l l >{\raggedright\arraybackslash}p{3in}}
 1950s: & Walter & Sony 64484\\
 1960s:& Vienna Phil/Kertesz & London 417678\\
 1970s:& Philharmonia/Stokowski &RCA 62601\\
 1980s:& Vienna Phil/Kondrashin & London 430702\\
-1990s: &  New York/Masur & Teldec 73244\\
-\\
-& \hskip -3.5em To those we must add: \\
+1990s: &  New York/Masur & Teldec 73244
+\end{tabular}
+\end{center}
+
+\noindent
+To those we must add:
+
+\begin{center}
+\begin{tabular}{l l >{\raggedright\arraybackslash}p{3in}}
 1970s: &  Boston/Fiedler & RCA 6530\\
 1980s: &  London Phil/Macal & EMI NA\\
-1980s: & Czech Phil/Neumann & Supraphon (many) or Denon 75968\\
+1980s: & Czech Phil/Neumann & Supraphon (many)\\
+&& or Denon 75968\\
 1990s: &  Philadelphia/Sawallisch & EMI 69804\\
 1990s: & Czech Phil/Belohlavek & Supraphon 1987
 \end{tabular}
