--- a/arg/dvorak.tex
+++ b/arg/dvorak.tex
@@ -503,7 +503,7 @@ Tom Godell dealt with the Talich recordings of symphonies 6-8 in the Historic Co
 catalog. After all, his connection with Dvorak went back to Dvorak's time. (Dvorak recommended him for admission to the Prague Conservatory in 1897.) I agree with his comments on the Talich 6 and 7 and 8 on Koch.
 These are indispensable for the collector of older material. I also wouldn't be without the wonderfully propulsive Talich 8th on Supraphon.
 
-Another Czech conductor just as important as Talich was Karel Sejna. His slightly more recent-and thus better recorded-Supraphon disc of Symphony 5, coupled with one of the finest recordings of the three Slavonic Rhapsodies, is nearly indispensable— as are his versions of 6 and 7 in the same series. Tempos are never rushed, and the ebb and flow of the music is wonderful.
+Another Czech conductor just as important as Talich was Karel Sejna. His slightly more recent-and thus better recorded-Supraphon disc of Symphony 5, coupled with one of the finest recordings of the three Slavonic Rhapsodies, is nearly indispensable---as are his versions of 6 and 7 in the same series. Tempos are never rushed, and the ebb and flow of the music is wonderful.
 I hesitate to mention it because the 1944 and 1946 Prague Radio transcriptions sound pretty bad, but there was a Multisonic disc of true historic importance. Rafael Kubelik conducts Symphony 8 and the Piano Concerto with Rudolf Firkusny and the Czech Philharmonic---young musicians in music they loved all their lives. The Czech Philharmonic was in top form.
 
 The {\it New World} is over-recorded, but the Talich is one of the most important. It is a vital, typically Czech interpretation. I cannot resist mentioning the pre-World War II recording by George Szell with the Czech Philharmonic. It has much of the tension and drama of the conductor's later Cleveland recordings but also a
@@ -513,7 +513,7 @@ Not many people know that Sir Thomas Beecham and the London Philharmonic recorde
 
 One other disc deserves mention, taped at the Prague Spring Festival in 1951 and 1956.
 Andre Navarra is the cellist in the Cello Concerto with the much under-appreciated Frantisek Stupka conducting. Also included is a marvelous performance by the Czech violinist Vasa Prihoda with Jaroslav Krombholc in the Violin Concerto. The sound isn't particularly good,
-but the performances are worth having. The Prague Radio Symphony accompanies (was on Multisonic—a label that seems to have vanished).
+but the performances are worth having. The Prague Radio Symphony accompanies (was on Multisonic---a label that seems to have vanished).
 
 The {\it Slavonic Dances} have also been over-recorded. At least one Czech conductor has recorded them each decade for almost 70 years.
 Talich recorded them twice. His 1935 set is on Music and Arts, and his 1950 edition is on Supraphon. That is probably the most outstanding recording of them. It glows with a passion and nobility that few others have. Also worthy of mention is a just-reissued recording by Otakar Jeremias on Dante-Lys. It was made in 1943 during the wartime occupation of Czechoslovakia by Germany. Jeremias was the permanent conductor of the Prague Radio Or-chestra. Rarely have I heard this music conducted with such high voltage. Tempos are almost rushed, but there is a defiance and excitement in the music that makes one wonder it this wasn't a case of the Czech musicians using their national music to thumb their collective noses at the Nazis. I couldn't recommend it as an only recording, but it is definitely unique.
@@ -529,18 +529,63 @@ Many of the above observations are the results of our discussions.-Ed]
 
 \section{Symphonic Poems}
 
-Of the five symphonic poems, four are based on the lurid tales of Karel Jaromir Erben, which are even more gruesome than the Brothers Grimm, reveling in morbid accounts of butchery, body mutilation, and other grisly goings-on. In {\it The Midday Witch} a mother threatens her mischievous child with tales of a malevolent hobgoblin, who promptly appears before her horrified eyes to claim the boy; the father returns home to find the child dead---crushed beneath the mother, who has collapsed in fright. In {\it The Wood Dove} we have the all-too-easily-consoled widow who despite her lamentations is quite prepared to marry again until the plaintive sound of the Wood Dove fills her heart with remorse, since it was she who did her husband in. {\it The Water Goblin} is a particularly ominous goblin who seizes a young maiden and takes her with him to the bottom of the lake; when she tricks him into letting her see her mother one last time, he relents on the condition that she leave their baby behind; but when she reneges on the deal and refuses to return, the Watersprite has his revenge-the girl answers a knock on the door to find the baby's headless body on the porch. Only {\it The Golden Spinning Wheel} might be said to have a happy ending: an old woman and her daughter hack up the beautiful stepdaughter and pull the old switcheroo once they learn the king seeks her hand in marriage, but the Spinning Wheel---apparently equipped with a sound card-tells the king what happened, and with the help of a mysterious old man the girl is put back together and marries the king after all.
+Of the five symphonic poems, four are based on the lurid tales of Karel Jaromir Erben, which are even more gruesome than the Brothers Grimm, reveling in morbid accounts of butchery, body mutilation, and other grisly goings-on. In {\it The Midday Witch} a mother threatens her mischievous child with tales of a malevolent hobgoblin, who promptly appears before her horrified eyes to claim the boy; the father returns home to find the child dead---crushed beneath the mother, who has collapsed in fright. In {\it The Wood Dove} we have the all-too-easily-consoled widow who despite her lamentations is quite prepared to marry again until the plaintive sound of the Wood Dove fills her heart with remorse, since it was she who did her husband in. {\it The Water Goblin} is a particularly ominous goblin who seizes a young maiden and takes her with him to the bottom of the lake; when she tricks him into letting her see her mother one last time, he relents on the condition that she leave their baby behind; but when she reneges on the deal and refuses to return, the {\it Watersprite} has his revenge-the girl answers a knock on the door to find the baby's headless body on the porch. Only {\it The Golden Spinning Wheel} might be said to have a happy ending: an old woman and her daughter hack up the beautiful stepdaughter and pull the old switcheroo once they learn the king seeks her hand in marriage, but the Spinning Wheel---apparently equipped with a sound card---tells the king what happened, and with the help of a mysterious old man the girl is put back together and marries the king after all.
 
 No such morbid content informs Dvorak's last tone poem, {\it Heldenlied} (Hero's Song); though vaguely programmatic, contrasting the Hero's initial despair (or is it the composer's?) with his eventual victory and triumph, we are not given a blow-by-blow analysis as with Richard Strauss's {\it Heldenleben} written a couple
 years later.
 
 If you want all five tone poems together, your best bet is the Chandos set with Järvi
-(8798), pulling together the fillers from the symphonies; in general they're more sumptuously recorded than the symphonies, and it's good to have them together in one box (coupled with the overture {\it My Home}). While Lawrence Hansen finds Järvi's readings ``a little too hard and slick and homogenized at times'', Mr Haller feels the combination of Järvi's compelling narrative, gorgeous sound, and the convenient boxed set makes this the one to buy— especially if you want {\it Hero's} Song too.
+(8798), pulling together the fillers from the symphonies; in general they're more sumptuously recorded than the symphonies, and it's good to have them together in one box (coupled with the overture {\it My Home}). While Lawrence Hansen finds Järvi's readings ``a little too hard and slick and homogenized at times'', Mr Haller feels the combination of Järvi's compelling narrative, gorgeous sound, and the convenient boxed set makes this the one to buy---especially if you want {\it Hero's} Song too.
 
 Supraphon brought out all five tone poems with the Czech Philharmonic under Bohumil
 Gregor (2196); but the {\it Hero's Song} was the only reason to buy the set, since Gregor's slick, superficial readings rarely delved beneath the bright melodic exterior of the moody, sinister
 Erben fables. The same recording was on Supraphon 0378, coupled with the {\it Slavonic Rhapsodies}, {\it My Home}, {\it Symphonic Variations}, and {\it Scherzo Capriccioso}. Don Vroon liked Gregor's {\it Hero's Song} a lot more than Järvi's, which he called unidiomatic. Macal seems too fast.
 
-Rafael Kubelik never recorded {\it Hero's Song}; but his account of the other four pieces for DG (435 074) is hard to beat, extracting the very essence of the composer's dramatic (and sometimes long-winded) narrative in sonics that---if not as upfront and vital as Chandos', 
+Rafael Kubelik never recorded {\it Hero's Song}; but his account of the other four pieces for DG (435 074) is hard to beat, extracting the very essence of the composer's dramatic (and sometimes long-winded) narrative in sonics that---if not as upfront and vital as Chandos's---are still clear and detailed to a fault. On Naxos 550598, Stephen Gunzenhauser offers terse, well-characterized portraits of the {\it Wood Dove}, {\it Midday Witch} and {\it Spinning Wheel}; sonics are warm and enveloping, and performances are first rate. Lawrence Hansen likes Vernon Handley's recording of the {\it Wood Dove}, {\it Watersprite} and {\it Spinning Wheel} better than Järvi's: Handley seems more sincere and expressive and allows the music to flow more naturally---though occasional shifts in sonic perspective prove distracting.
+
+Vaclav Neumann on Supraphon 0199 can be recommended as a quick-fix way of obtaining all four Erben-inspired pieces on one well-filled disc; while much of the atmosphere of the music still manages to come across, the recording is cramped and cavernous. Compared to Järvi and Kubelik, Zdenek Chalabala's vintage recordings are rather raw sounding---especially the winds, with plangent (occasionally shrill) brasses; but even such sonic shortcomings do not detract measurably from glorious performances that demonstrate a singing quality and flexibility of phrasing perhaps possible only with a conductor and ensemble (the Czech Philharmonic, of course) thoroughly familiar with the music. Chalabala was a wonderful interpreter of Dvorak and Smetana, and these
+are marvelously idiomatic performances. They were originally issued on Urania but are now on Supraphon 3056. The classic Talich recordings from 1949-51 are available on Supraphon---not the same as the 1954 concert performances of {\it Watersprite}, {\it Midday Witch} and {\it Wood Dove} on Panton (both good).
+Istvan Kertesz's superb London recordings of three of the tone poems have long been available only as Decca Ovation imports, the {\it Spinning Wheel} and {\it Watersprite} coupled with the {\it Scherzo Capriccioso} and {\it Othello Overture} on 425 060 and the {\it Midday Witch} coupled with the {\it Symphonic Variations}, {\it Hussites} and {\it Serenade for Winds} on 425 061. These have now been put together on a "Double Decca", replacing the {\it Wind Serenade} with three overtures: {\it Carnival}, {\it Nature's Realm}, and {\it My Home}.
+Watch for a US issue on London.
+
+There are many individual versions of the symphonic poems, usually doled out as fillers with the symphonies. Chief among these are the Järvi: Hero's Song is with 1, {\it Watersprite} with 5, {\it Midday Witch} with 6, {\it Spinning Wheel} with 7, and {\it Wood Dove} with 8. Among the best with Macal's Milwaukee series of symphonies are {\it The Noon Witch} (with 4) and {\it The Golden Spinning Wheel} (with 5, reviewed this issue).
+Both are absorbing and have excellent sound.
+Inbal includes a strong and joyous {\it Wood Dove} with his Teldec set of symphonies 7,8, and 9.
+{\it Midday Witch} was included with the Eighth Symphony by Abbado on Sony (64303); Gerald Fox thought it was as good a performance as any he had heard, emphasizing the musical qualities over the gruesome story line. Seiji Ozawa's Witch is with 8 on a not very well filled Philips disc (434 990), but it is atmospheric, and sound is clear and detailed.
+
+Carl Bauman was disappointed with Belohlavek's {\it Spinning Wheel} on Chandos
+(9048), coupled with 8; he found it lacking in elegance next to Beecham, Talich, Kubelik, or Chalabala---the recording glassy and harsh.
+
+Mr Haller likes Peter Tiboris's account of {\it Watersprite} very much---at once broadly expressive and sharply characterized---though the remainder of the disc is a rather mixed bag (Elysium 701). The Editor considers both Belohlavek's Watersprite and the Seventh Symphony coupled with it on Chandos 9391 as good as they get: excellent performances in superb sound. Koss (1010) has straitjacketed Zdenek Macal's Water Goblin in diffuse, gray sonics (but other reviewers like it). Naxos had Antoni Wit do it in combination with the Piano Concerto (550896)---no doubt as complement to Stephen Gunzenhauser's account of the other three noted above—and he did it well enough to get top marks from Vroon, who considers it the best there is at any price, gloriously played and recorded.
+
+Mr Vroon had high praise for Belohlavek's Wood Dove, as well as the accompanying Sixth Symphony (Chandos 9170); indeed he liked it even more than the Kubelik, praising Belohlavek's expansive treatment of the main theme as well as the thrilling sound. Mr Vroon finds the Macal recording for Koss (1009) too hard-driven---``smooth but tense''---despite splendid sound.
+
+Haller had high praise for the Naxos CD of {\it Hero's Song} conducted by Antoni Wit, coupled with the Czech Suite, Hussites, and Festival March (553005); it's a gloriously festive performance with richly textured sound to match.
+
+\section{Symphonic Overtures}
+
+The {\it Carnival} Overture, one of Dvorak's best-loved works, is the third of three overtures grouped together under the title ``Nature, Life, and Love''; the other two are {\it In Nature's Realm} and {\it Othello}. These are almost more akin to tone poems than overtures; indeed, one writer has called them ``a symphonic cycle consisting of a pastorale, scherzo, and finale''. It is gratifying that so many conductors have recorded the entire cycle, because the familiar leitmotif introduced by the clarinet in all three overtures---described by Karl Schumann as ``a symbol of nature as the basis of all life''---can best be appreciated when it is heard as the unifying theme of all three, not just a pleasant melody encountered along the way.
+
+Gerd Albrecht recorded the triptych for Supraphon, coupled with the Brahms First
+(1830); Paul Althouse called {\it Carnival} in particular a wild listening experience. Karel Ančerl's account for Supraphon, coupled with {\it My Home} and {\it Hussites} (0605), was praised by Haller as idiomatic and compelling, the sonics crisp and clean. Bohumil Gregor is even drabber in the overtures than in the tone poems.
+On Naxos 550600, Stephen Gunzenhauser couples all three with {\it My Home} and the even rarer {\it Vanda}; they are well worth hearing, despite marked echo, and demonstrate Gunzenhauser's love for the music. Vernon Handley on Chandos 8453 seems more at home in the less familiar {\it Nature's Realm} and {\it Othello} than in the far better known {\it Carnival}; he seems to hold back, and the cavernous sonics don't help matters any. In contrast, on ASV 794 John Farrer has {\it Carnival } fairly explode into your living room, and {\it In Nature's Realm} is one of the better ones as well, but his {\it Othello} doesn't capture the somber mood as well as some others. Kubelik on DG 435 074, coupled with the tone poems, is hard to beat in this repertory, and his hyper {\it Hussites} even outdoes Kertesz for sheer visceral excitement. He offers a fine {\it My Home} as well.
+
+{\it Carnival} turns up pretty often on its own; there are far too many to list, but pride of place would surely go to Bernstein (Sony), Szell (Sony-just reissued with Symphonies 7-9), Dorati (Mercury), and Reiner (RCA). In addi-Carl Bauman would recommend Belohlavek (Supraphon 1987, with 9) and Pešek on Virgin (with 3). Vroon praises Järvi (Chandos, with 3). He finds no particular advantage to sound or performance in Libor Pešek's Virgin CD of {\it In Nature's Realm} (with
+6), though it's impressive enough if you don't know Kertesz or Kubelik. Mr Haller recommends Charles Gerhardt on Chesky 108 (part of "Light Classics", Volume 2. See tone poems for information on a possible Kertesz reissue---it would top them all.)
+
+\section{Slavonic Dances}
+
+Dvorak's publisher requested these, hoping to build on the tremendous sales he had had of the Brahms Hungarian Dances, played at the time by every pianist in Europe. The first set of eight (Op. 46) were mostly Bohemian (only \No2 was not: it was of Serbian origin). In the second set (Op. 72) Dvorak became more cosmopolitan, with dances from Poland and Russia and Slovakia. But perhaps by then the inspiration was wearing thin: the first set is more appealing.
+
+Starting with A, we called the Altrichter inflexible and perfunctory. His lumbering tread changes several numbers into marches (Nov/Dec 1997). Neumann found more warmth and humanity in these pieces, even with faster tempos. And Neumann leads with delightful nuances and tempo fluctuations.
+The latest Neumann is on Canyon-pretty expensive-but it's four minutes slower overall than the 1985 Supraphon, and Carl Bauman says it's worth the extra money (Nov/Dec
+1994). The rest of us are happy enough with the Supraphon, and Mr Bauman agrees that
+it's excellent.
+
+Karel Sejna was a generation earlier than
+Neumann and recorded these in 1959; the bass is weak, but the overall sound is pretty good.
+Carl Bauman freely mentions Sejna in the same breath with Talich and Ancerl. And Lawrence Hansen calls the Sejna recording colorful, idiomatic, and exciting. Another Czech conductor who found this music natural was Zdenek Kosler. He holds his own against the heady Neumann, the more elegant Kubelik (just reissued by DG), and the manic but tightly-focussed Szell. As Lawrence Hansen told us, these are rip-snorting performances full of gusto and flair, with a big, gutsy orchestral sound. They have a lot of energy, vitality, joy, and freedom.
+
+The Segerstam on BIS has good sound---especially bass---and some original ideas. Fasts seem faster than usual and slows slower. Still, the orchestra isn't world-class. We found the
 
 \end{document}
